src/objects/UM_InvoiceHeader__c.object
<CustomObject>
    <description>Extract from Kenan</description>
    <fields>
        <fullName>Billing_Account_Number__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; &amp; UM_Billing_Location__r.Id ,UM_Billing_Location__r.LG_BillingAccountNumber__c,&quot;_blank&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Account Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Backout_Status__c</fullName>
        <label>Backout Status</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Billing_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Account</label>
        <referenceTo>csconta__Billing_Account__c</referenceTo>
        <relationshipLabel>Invoice Headers</relationshipLabel>
        <relationshipName>Invoice_Headers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_Customer_SF_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoice Headers1</relationshipLabel>
        <relationshipName>Invoice_Headers1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UM_InvoiceNumber__c</fullName>
        <description>Unique Kenan 10 digit Invoice Number</description>
        <externalId>true</externalId>
        <label>Invoice Number</label>
        <length>14</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UM_Invoice_Amount_Gross_Currency__c</fullName>
        <description>Outstanding Invoice Amount</description>
        <label>Outstanding Invoice Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Invoice_Amount_Gross__c</fullName>
        <description>Outstanding Invoice Amount</description>
        <label>Outstanding Invoice Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Invoice_Amount_Net_Currency__c</fullName>
        <description>Field to show real value of Invoice Amount sent by Kenan</description>
        <label>Gross Total Due</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>UM_Invoice_Amount_Net__c</fullName>
        <description>gross total due</description>
        <label>Gross Total Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>UM_Invoice_Date__c</fullName>
        <description>Date when invoice was issued</description>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UM_IsCDRAvailable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This filed will be checked if there is a CDR available against the invoice</description>
        <label>CDR Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>UM_OpenCDR__c</fullName>
        <description>This gives link to open CDR with extra parameter in URL</description>
        <formula>IF( UM_IsCDRAvailable__c, IF(CONTAINS(UM_InvoiceNumber__c,&apos;-&apos;), 
HYPERLINK(&quot;/apex/UM_Documentum?invoiceno=&quot; + LEFT(UM_InvoiceNumber__c,FIND(&apos;-&apos;,UM_InvoiceNumber__c)-1) + &apos;&amp;itemised_bill=1&apos;, &quot;Open CDR&quot;), 
HYPERLINK(&quot;/apex/UM_Documentum?invoiceno=&quot; + UM_InvoiceNumber__c + &apos;&amp;itemised_bill=1&apos;, &quot;Open CDR&quot;)),&apos;&apos;)</formula>
        <label>Open CDR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_OpenPDF__c</fullName>
        <formula>IF(CONTAINS(UM_InvoiceNumber__c,&apos;-&apos;), 
HYPERLINK(&quot;/apex/UM_Documentum?invoiceno=&quot; + LEFT(UM_InvoiceNumber__c,FIND(&apos;-&apos;,UM_InvoiceNumber__c)-1), &quot;Open Invoice&quot;), 
HYPERLINK(&quot;/apex/UM_Documentum?invoiceno=&quot; + UM_InvoiceNumber__c, &quot;Open Invoice&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Open Invoice</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UM_Payment_Due_Date__c</fullName>
        <label>Payment Due Date</label>
        <type>Date</type>
    </fields>
    <label>Invoice Header</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UM_InvoiceNumber__c</columns>
        <columns>UM_OpenPDF__c</columns>
        <columns>UM_Customer_SF_ID__c</columns>
        <columns>UM_Invoice_Amount_Gross_Currency__c</columns>
        <columns>UM_Invoice_Amount_Net_Currency__c</columns>
        <columns>UM_Invoice_Date__c</columns>
        <columns>UM_Payment_Due_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Headers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice Headers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>